@@ -1,3 +1,14 @@
+2009-12-06  Ivan Maidanski <ivmai@mail.ru>
+
+	* dyn_load.c (HAVE_REGISTER_MAIN_STATIC_DATA): Don't define unless
+	GC_register_main_static_data() is defined.
+	* dyn_load.c (GC_register_dynamic_libraries): Define only if used
+	(if DYNAMIC_LOADING or PCR or Win32/CE).
+	* dyn_load.c (GC_register_main_static_data): Define the default
+	one only if DYNAMIC_LOADING.
+	* include/private/gc_priv.h (GC_register_dynamic_libraries):
+	Declare only if used (to prevent compiler warning).
+
 2009-12-04  Ivan Maidanski <ivmai@mail.ru>
 
 	* mark_rts.c (GC_approx_sp): Add a comment (for GCC).
